[package]
authors = ["Parallel Team", "Liebi Technologies <bifrost@liebi.com>"]
edition = "2021"
name = "bifrost-ismp"
version = "0.8.0"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# crates.io
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
anyhow = { workspace = true, default-features = false }

# polytope labs
ismp = { workspace = true, default-features = false }
pallet-ismp = { workspace = true, default-features = false }

# substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }

[dev-dependencies]

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "scale-info/std",
    "ismp/std",
    "pallet-ismp/std",
    "pallet-balances/std",
    "anyhow/std"
]

try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
