[package]
name = "bifrost-vtoken-minting-rpc"
version = "0.8.0"
authors = ["Liebi Technologies <bifrost@liebi.com>"]
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
parity-scale-codec = { workspace = true, features = ["derive"] }
jsonrpsee = { workspace = true, features = ["server", "macros"] }
sp-api = { workspace = true }
sp-runtime = { workspace = true }
sp-blockchain = { workspace = true }
sp-core = { workspace = true }
sp-rpc = { workspace = true }
bifrost-primitives = { workspace = true }
bifrost-vtoken-minting-rpc-runtime-api = { workspace = true }
