[package]
name = "bifrost-farming-rpc-runtime-api"
version = "0.8.0"
authors = ["Liebi Technologies <bifrost@liebi.com>"]
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
sp-std = { workspace = true }
sp-api = { workspace = true }
bifrost-primitives = { workspace = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "sp-api/std",
    "bifrost-primitives/std",
]
